notif banner was showing up invisible but blocking some headers, fixed that so the banner is only rendered when needed, I also completed the MyEvents.jsx page and added more functionality to the register button, when a user clicks the register button they now have the option to unregister

--- a/src/css/DonatePage.css
+++ b/src/css/DonatePage.css
@@ -6,15 +6,9 @@
   color: rgb(72, 109, 204);
   max-width: 650px;
   margin: 2rem auto;
+  position: relative;
+  z-index: 0;
 }
-
-.donate-form-header {
-  justify-content: center;
-  text-align: center;
-  margin-bottom: 2rem;
-  font-size: 1.50rem;
-}
-
 
 /* Donate Amount Buttons */
 .preset-buttons {
