--- a/src/css/home.css
+++ b/src/css/home.css
@@ -147,7 +147,7 @@ html {
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 50;
+  z-index: 1000;
 }
 
 .header-container {
